--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -85,7 +85,7 @@ jobs:
         if: contains(github.ref, 'main')
         with:
           host: ${{ secrets.HOST_PROD }}
-          username: ec2-user
+          username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           envs: GITHUB_SHA
           script: |
