--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,4 +1,4 @@
-FROM amazoncorretto:11
+FROM eclipse-temurin:17-jdk
 EXPOSE 8000
 ARG JAR_FILE=build/libs/MODUDA-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} app.jar
